...
                },
              ),
            ] else ...[
              CustomFormField(
                key: const ValueKey('sip_username_field'),
                semanticsIdentifier: 'sip_username_field',
                title: 'SIP Username',
                controller: _sipUserController,
                hintText: 'Enter your SIP username',
                validator: (value) {
                  if (value == null || value.isEmpty) {
                    return 'Please enter a SIP username';
                  }
...
                },
              ),
              const SizedBox(height: spacingS),
              CustomFormField(
                key: const ValueKey('sip_password_field'),
                semanticsIdentifier: 'sip_password_field',
                title: 'SIP Password',
                controller: _sipPasswordController,
                hintText: 'Enter your SIP password',
                isPassword: true,
                validator: (value) {
                  if (value == null || value.isEmpty) {
                    return 'Please enter a SIP password';
...
              ),
            ],
            const SizedBox(height: spacingS),
            CustomFormField(
              key: const ValueKey('caller_name_field'),
              semanticsIdentifier: 'caller_name_field',
              title: 'Caller ID Name',
              controller: _sipCallerIDNameController,
              hintText: 'Enter your caller ID name',
              validator: (value) {
                if (value == null || value.isEmpty) {
                  return 'Please enter a caller ID name';
                }
...
              },
            ),
            const SizedBox(height: spacingS),
            CustomFormField(
              key: const ValueKey('caller_number_field'),
              semanticsIdentifier: 'caller_number_field',
              title: 'Caller ID Number',
              controller: _sipCallerIDNumberController,
              hintText: 'Enter your caller ID number',
              keyboardType: TextInputType.phone,
              validator: (value) {
                if (value == null || value.isEmpty) {
                  return 'Please enter a caller ID number';
...
                            context,
                          ).showSnackBar(SnackBar(content: Text(e.toString())));
                        }
                      }
                    },
                    child: Text(
                      widget.existingProfile != null ? 'Update' : 'Save',
                    ),
                  ),
                ),
              ],
            ),
          ],
...
