...
                  setState(() {
                    _isAddingProfile = true;
                  });
                },
                icon: const Icon(Icons.add, color: Colors.black),
                label: const Text(
                  'Add new profile',
                  style: TextStyle(
                    color: Colors.black,
                    fontWeight: FontWeight.w400,
                  ),
                ),
                style: ElevatedButton.styleFrom(
...
                              context
                                      .watch<ProfileProvider>()
                                      .selectedProfile !=
                                  null
                              ? () => Navigator.pop(context)
                              : null,
                          child: const Text('Confirm'),
                        ),
                      ),
                    ],
                  ),
                ],
              ),
...
