...
            // Instructions text
            Padding(
              padding: const EdgeInsets.symmetric(horizontal: Dimensions.paddingMedium),
              child: Text(
                provider.registered
                    ? 'Enter a destination (+E164 phone number or sip URI) to initiate your call.'
                    : 'Please confirm details below and click 'Connect' to make a call.',
                style: Theme.of(context).textTheme.headlineMedium,
              ),
            ),
            
            const SizedBox(height: spacingXL),
            
...
          const SizedBox(height: spacingS),
          Text(
            'Call ID: ${activeCall!.callId}',
            style: Theme.of(context).textTheme.bodySmall,
          ),
          Text(
            'Destination: ${activeCall!.destination}',
            style: Theme.of(context).textTheme.bodySmall,
          ),
          Text(
            'Direction: ${activeCall!.isIncoming ? 'incoming' : 'outgoing'}',
            style: Theme.of(context).textTheme.bodySmall,
          ),
...
