...
                    const SnackBar(
                      content: Text('Please enter a valid Target ID'),
                    ),
                  );
                }
              },
              child: const Text('Connect'),
            ),
          ],
        );
      },
    );
  }
...
        ],
      ),
      bottomNavigationBar: clientState == CallStateStatus.idle
          ? Padding(
              padding: const EdgeInsets.all(spacingXXL),
              child: BottomConnectionActionWidget(
                buttonTitle: 'Disconnect',
                onPressed: () => {
                  context.read<TelnyxClientViewModel>().disconnect(),
                },
              ),
            )
          : clientState == CallStateStatus.disconnected
...
